# fastapi-railway

./: Procfile  README.md  pyproject.toml  requirements.txt
app/: main.py  schemas.py
planetary_kp_api/: __init__.py  api.py  cli.py  client.py  remote.py
planetary_kp_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
planetary_kp_api/data/: kp_mapping_all.xlsx
planetary_kp_api/services/: kp_mapping.py
